atribute 'alt' added to each picture in index.html

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       </nav>
 
       <a class="header__logo">
-        <img src="images/logo-black.svg" class="header__logo-image" />
+        <img src="images/logo-black.svg" alt="current site logo" class="header__logo-image" />
       </a>
 
       <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
-        <a href="info@sobaka.ge">info@sobaka.ge</a>
+        <a href="info:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
       </address>
     </header>
@@ -126,7 +126,7 @@
       <section class="about">
         <div class="about__column">
           <div class="about__logo">
-            <img src="images/logo-white.svg" class="about__logo-image" />
+            <img src="images/logo-white.svg" alt="current site logo" class="about__logo-image" />
           </div>
         </div>
 
@@ -160,32 +160,32 @@
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a href="" class="footer__menu-link footer__menu-link_active"
+            <a href="#" class="footer__menu-link footer__menu-link_active"
               >главная</a
             >
           </li>
           <li class="footer__menu-list-item">
-            <a href="" class="footer__menu-link">посмотреть лоты</a>
+            <a href="#" class="footer__menu-link">посмотреть лоты</a>
           </li>
           <li class="footer__menu-list-item">
-            <a href="" class="footer__menu-link">об аукционе</a>
+            <a href="#" class="footer__menu-link">об аукционе</a>
           </li>
         </ul>
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a href="#" class="footer__social-link"
-            ><img src="images/yt.svg" class="footer__social-icon"
+            ><img src="images/yt.svg" alt="yt logo" class="footer__social-icon"
           /></a>
         </li>
         <li class="footer__social-list-item">
           <a href="#" class="footer__social-link"
-            ><img src="images/vk.svg" class="footer__social-icon"
+            ><img src="images/vk.svg" alt="vk logo" class="footer__social-icon"
           /></a>
         </li>
         <li class="footer__social-list-item">
           <a href="#" class="footer__social-link"
-            ><img src="images/pinterest.svg" class="footer__social-icon"
+            ><img src="images/pinterest.svg" alt="pinterest logo" class="footer__social-icon"
           /></a>
         </li>
       </ul>
