--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
-        <a href="info:info@sobaka.ge">info@sobaka.ge</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
       </address>
     </header>
@@ -154,7 +154,7 @@
     <footer class="footer">
       <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
-        <a href="info@sobaka.ge">info@sobaka.ge</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
       </address>
       <nav class="footer__menu">
