--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </nav>
 
       <a class="header__logo">
-        <img src="images/logo-black.svg" alt="current site logo" class="header__logo-image" />
+        <img src="images/logo-black.svg" alt="логотип 'оно тебе надо'" class="header__logo-image" />
       </a>
 
       <address class="address">
@@ -58,7 +58,7 @@
           <h2 class="cover__description-text">
             Аукцион вещей, в которые никто не верил
           </h2>
-          <button class="bet-button">Сделать ставку</button>
+          <button class="bet-button" type="button">Сделать ставку</button>
         </div>
         <div class="overlay"></div>
       </section>
@@ -126,7 +126,7 @@
       <section class="about">
         <div class="about__column">
           <div class="about__logo">
-            <img src="images/logo-white.svg" alt="current site logo" class="about__logo-image" />
+            <img src="images/logo-white.svg" alt="логотип 'оно тебе надо'" class="about__logo-image" />
           </div>
         </div>
 
@@ -175,17 +175,17 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a href="#" class="footer__social-link"
-            ><img src="images/yt.svg" alt="yt logo" class="footer__social-icon"
+            ><img src="images/yt.svg" alt="логотип yt" class="footer__social-icon"
           /></a>
         </li>
         <li class="footer__social-list-item">
           <a href="#" class="footer__social-link"
-            ><img src="images/vk.svg" alt="vk logo" class="footer__social-icon"
+            ><img src="images/vk.svg" alt="логотип вк" class="footer__social-icon"
           /></a>
         </li>
         <li class="footer__social-list-item">
           <a href="#" class="footer__social-link"
-            ><img src="images/pinterest.svg" alt="pinterest logo" class="footer__social-icon"
+            ><img src="images/pinterest.svg" alt="логотип пинтерест" class="footer__social-icon"
           /></a>
         </li>
       </ul>
